# MyShell-TTS-Subnet

./: README.md  pyproject.toml
MeloTTS/: requirements.txt  setup.py
MeloTTS/melo/: TTS_Readme.txt  api.py  audio_prep.py  download_utils.py  preprocess_text.py
constants/: __init__.py
docs/: config.json  miner.md  validator.md
model/: data.py  model_tracker.py  model_updater.py  utils.py
model/storage/chain/: chain_model_metadata_store.py
model/storage/disk/: disk_model_store.py
model/storage/hugging_face/: hugging_face_model_store.py
neurons/: validator.py  validator_utils.py
preprocess/: clean.py  download.sh
scripts/: start_validator.py
tests/model/: test_model_utils.py
tests/neurons/: test_validator_utils.py
tts_rater/: en_example_text.txt  models.py  pann.py  rater.py  reference_encoder.pth  text_list.json  vec_gt.pth
tts_rater/MeloTTS-English/: README.md  checkpoint.pth  config.json
tts_rater/pann/: pann_embeds.pth
tts_rater/rawnet/: antispoofing_embeds.pth  enc_dec.py  inference.py  param_sinc_fb.py  rawnet3.py  rawnetblock.py  scripting.py
tts_subnet/: check_model.py  upload_model.py
